--- a/TetrisGB/TetrisGB/TetrisGB.csproj
+++ b/TetrisGB/TetrisGB/TetrisGB.csproj
@@ -48,6 +48,8 @@
     <Compile Include="Game.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Tetromino.cs" />
+    <Compile Include="TetrominoManager.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
